<resources>
    <string name="app_name">AssicurazioneAI</string>
    <string name="error_unknown_error_occured">Unknown error occurred</string>
    <string name="error_server_problem">Error occurred while connecting to the server</string>
    <string name="error_empty_data">Not Found</string>
    <string name="error_no_internet_connection">Please, check your internet connection</string>
    <string name="error_image_wrong_format">File format is not supported</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_creating_image_file">Error occurred while creating image file</string>
    <string name="send_image_button">Send Image</string>
    <string name="login_welcome">Continue with Phone Number</string>
    <string name="msg_start_verify_number">We\'ll send you a code to verify your mobile phone number</string>
    <string name="hint_phone_number_example">+36 1 234 5678</string>
    <string name="mobile_number_hint">Phone number</string>
    <string name="txt_btn_continue">Continue</string>
    <string name="msg_accepting_terms_and_conditions">By continuing, I accept the Terms of condition, User agreements, and Privacy Policy</string>
    <string name="verify_phone_title">Verify Your Phone Number</string>
    <string name="msg_verification_code_sent_phone">Enter the code  we\'ve sent to your phone number that is %s</string>
    <string name="txt_btn_resend_code">Resend Code</string>
    <string name="txt_btn_resend_code_in_sec">Resend Code in %s</string>
    <string name="error_no_camera_permission">Camera permission is needed to capture a photo</string>
    <string name="txt_btn_capture_photo">Take a shot</string>
    <string name="title_progress">Processing...</string>
    <string name="description_progress">Please, wait a bit while we are detecting damages in your car.</string>
    <string name="title_rate_dialog">How was your Experience?</string>
    <string name="description_rate_dialog">Please, give your feedback for making our product better</string>
    <string name="rate_submit_btn">Submit</string>
    <string name="rate_cancel_btn">Exit</string>
    <string name="rate_message">Thank you for your feedback :)</string>
    <string name="rate__btn">Rate</string>
    <string name="txt_btn_submit_photos">Analyze car</string>
    <string name="txt_btn_retake_photos">Retake photo</string>
    <string name="text_damage_severity">Detected damage severity: %d light, %d medium, %d hard damages.</string>
</resources>