<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#DE000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hard Damage" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:letterSpacing="0.1"
        android:text="@string/text_damage_severity"
        android:textColor="#99000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <ImageView
        android:id="@+id/checkView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv">


    </ImageView>

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#dbdbdb"
        app:layout_constraintTop_toBottomOf="@id/checkView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitRateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rate__btn"
        app:backgroundTint="#207b34"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelRateButton"
        style="?materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rate_cancel_btn"
        android:textColor="#207b34"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submitRateButton"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />
</androidx.constraintlayout.widget.ConstraintLayout>





