<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_rate_dialog"
        android:textColor="#DE000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:letterSpacing="0.1"
        android:text="@string/description_rate_dialog"
        android:textColor="#99000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rateContainerView"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#4D29EE54"
        app:cardCornerRadius="54dp"
        app:layout_constraintEnd_toEndOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?actionBarItemBackground"
                android:src="@drawable/rate_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/rate_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?actionBarItemBackground"
                android:src="@drawable/rate_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?actionBarItemBackground"
                android:src="@drawable/rate_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?actionBarItemBackground"
                android:src="@drawable/rate_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#dbdbdb"
        app:layout_constraintTop_toBottomOf="@id/rateContainerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitRateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rate_submit_btn"
        app:backgroundTint="#207b34"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/titleTv"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelRateButton"
        style="?materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rate_cancel_btn"
        android:textColor="#207b34"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submitRateButton"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />
</androidx.constraintlayout.widget.ConstraintLayout>





