<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.35"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_image"
        android:transitionName="mainBgView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.60" />


            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:scaleX="0.8"
                android:transitionName="logo"
                android:scaleY="0.8"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleWelcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="-40dp"
                android:layout_marginBottom="10dp"
                android:elevation="4dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:transitionName="title"

                android:lineSpacingExtra="4dp"
                android:text="@string/verify_phone_title"
                android:textColor="#DE000000"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@id/codePinView"
                app:layout_constraintStart_toStartOf="@id/codePinView"
                app:layout_constraintTop_toBottomOf="@id/image_logo" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="4dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/msg_verification_code_sent_phone"
                android:textColor="#DE000000"
                android:textSize="16sp"
                android:transitionName="subTitle"
                app:layout_constraintEnd_toEndOf="@id/codePinView"
                app:layout_constraintStart_toStartOf="@id/codePinView"
                app:layout_constraintTop_toBottomOf="@id/titleWelcome" />

            <com.chaos.view.PinView
                android:id="@+id/codePinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:cursorVisible="true"
                android:fontFamily="@font/roboto_bold"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:itemBackground="#FFFFFF"
                android:textColor="#DE000000"
                android:textSize="21sp"
                android:textStyle="bold"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemHeight="80dp"
                app:itemRadius="12dp"
                app:itemSpacing="20dp"
                app:itemWidth="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subTitle"
                app:lineColor="#DBDBDB"
                app:lineWidth="1dp"
                app:viewType="rectangle" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/resendButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="56dp"
                android:paddingHorizontal="24dp"
                android:text="@string/txt_btn_resend_code"
                android:textColor="?attr/colorPrimary"
                app:backgroundTint="#99FFFFFF"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="@id/codePinView"
                app:layout_constraintStart_toStartOf="@id/codePinView"
                app:layout_constraintTop_toBottomOf="@id/codePinView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>